# rikka.rs

./: .gitignore  Cargo.toml
src/: error.rs  help.rs  lib.rs  parse.rs  rikka.rs
src/commands/: general.rs  help.rs  mod.rs  played.rs
src/commands/logs/: adapter.rs  cmd.rs  encrypt.rs  mod.rs
