[package]
name = "rikka-rs"
version = "0.1.0"
authors = ["Colin Adler <colin@coder.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
arrayvec = "0.5.1"
async-trait = "0.1"
blake3 = "0.3.6"
byteorder = "1.3"
bytes = "0.5"
cached = "0.18"
foundationdb = { git = "https://github.com/Clikengo/foundationdb-rs", branch = "master" }
futures = "0.3"
jemallocator = "0.3"
pin-project = "0.4"
reqwest = { version = "0.10", features = ["stream", "gzip", "brotli"] }
rusoto_core = "0.45"
rusoto_s3 = "0.45"
rusoto_signature = "0.45"
salsa20 = "0.6"
rust-s3 = "0.24.0"
serde_json = "1.0"
strum = "0.19"
strum_macros = "0.19"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
twilight = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-cache-inmemory = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-command-parser = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-embed-builder = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-gateway = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-http = { branch = "trunk", git = "https://github.com/twilight-rs/twilight", default-features = false, features = ["rustls", "simd-json"] }
twilight-model = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
twilight-mention = { branch = "trunk", git = "https://github.com/twilight-rs/twilight.git" }
rand = "0.7"
serde = "1.0"
serde_cbor = "0.11"
rs-humanize = "1.2"

# twilight = { path = "/home/colin/Projects/twilight-rs/twilight/twilight" }
# twilight-cache-inmemory = { path = "/home/colin/Projects/twilight-rs/twilight/cache/in-memory" }
# twilight-command-parser = { path = "/home/colin/Projects/twilight-rs/twilight/command-parser" }
# twilight-embed-builder = { path = "/home/colin/Projects/twilight-rs/twilight/embed-builder" }
# twilight-gateway = { path = "/home/colin/Projects/twilight-rs/twilight/gateway" }
# twilight-http = { path = "/home/colin/Projects/twilight-rs/twilight/http", default-features = false, features = ["rustls", "simd-json"] }
# twilight-mention = { path = "/home/colin/Projects/twilight-rs/twilight/mention" }
# twilight-model = { path = "/home/colin/Projects/twilight-rs/twilight/model" }

played-rs = { path = "/home/colin/Projects/coadler/played-rs" }

[profile.release]
debug = true
# lto = true
